Подготовка к релизу 0.6.0